Updating with recent changes to the v3.0.0-rc2 draft.
