# OpenAPIv3/openapi-3.0.json
@@ -154,19 +154,6 @@
         }
       }
     },
-    "serverVariables": {
-      "type": "object",
-      "description": "",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^[a-zA-Z0-9\\.\\-_]+$": {
-          "$ref": "#/definitions/serverVariable"
-        },
-        "^x-": {
-          "$ref": "#/definitions/specificationExtension"
-        }
-      }
-    },
     "serverVariable": {
       "type": "object",
       "description": "An object representing a Server Variable for server URL template substitution.",
@@ -352,7 +339,7 @@
           "$ref": "#/definitions/responses"
         },
         "callbacks": {
-          "$ref": "#/definitions/callbacks"
+          "$ref": "#/definitions/callbacksOrReferences"
         },
         "deprecated": {
           "type": "boolean"
@@ -445,7 +432,7 @@
           "$ref": "#/definitions/examplesOrReferences"
         },
         "content": {
-          "$ref": "#/definitions/content"
+          "$ref": "#/definitions/mediaTypes"
         }
       }
     },
@@ -466,26 +453,16 @@
           "type": "string"
         },
         "content": {
-          "$ref": "#/definitions/content"
+          "$ref": "#/definitions/mediaTypes"
         },
         "required": {
           "type": "boolean"
         }
       }
     },
-    "content": {
-      "type": "object",
-      "description": "Describes a set of supported media types. A Content Object can be used in Request Body Object, Parameter Objects, Header Objects, and Response Objects.",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^": {
-          "$ref": "#/definitions/mediaType"
-        }
-      }
-    },
     "mediaType": {
       "type": "object",
-      "description": "Each Media Type Object provides schema and examples for a the media type identified by its key.  Media Type Objects can be used in a Content Object.",
+      "description": "Each Media Type Object provides schema and examples for a the media type identified by its key.",
       "additionalProperties": false,
       "patternProperties": {
         "^x-": {
@@ -503,21 +480,11 @@
           "$ref": "#/definitions/examplesOrReferences"
         },
         "encoding": {
-          "$ref": "#/definitions/encoding"
+          "$ref": "#/definitions/encodings"
         }
       }
     },
     "encoding": {
-      "type": "object",
-      "description": "An object representing multipart region encoding for `requestBody` objects.",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^": {
-          "$ref": "#/definitions/encodingProperty"
-        }
-      }
-    },
-    "encodingProperty": {
       "type": "object",
       "description": "A single encoding definition applied to a single schema property.",
       "additionalProperties": false,
@@ -579,26 +546,13 @@
           "type": "string"
         },
         "headers": {
-          "$ref": "#/definitions/headers"
+          "$ref": "#/definitions/headersOrReferences"
         },
         "content": {
-          "$ref": "#/definitions/content"
+          "$ref": "#/definitions/mediaTypes"
         },
         "links": {
-          "$ref": "#/definitions/links"
-        }
-      }
-    },
-    "callbacks": {
-      "type": "object",
-      "description": "A map of possible out-of band callbacks related to the parent operation. Each value in the map is a Callback Object that describes a request that may be initiated by the API provider and the expected responses. The key value used to identify the callback object is an expression, evaluated at runtime, that identifies a URL to use for the callback operation.",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^[a-zA-Z0-9\\.\\-_]+$": {
-          "$ref": "#/definitions/callbackOrReference"
-        },
-        "^x-": {
-          "$ref": "#/definitions/specificationExtension"
+          "$ref": "#/definitions/linksOrReferences"
         }
       }
     },
@@ -612,16 +566,6 @@
         },
         "^x-": {
           "$ref": "#/definitions/specificationExtension"
-        }
-      }
-    },
-    "headers": {
-      "type": "object",
-      "description": "Lists the headers that can be sent in a response or forwarded via a link. Note that RFC7230 states header names are case insensitive.",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^[a-zA-Z0-9\\.\\-_]+$": {
-          "$ref": "#/definitions/headerOrReference"
         }
       }
     },
@@ -649,19 +593,9 @@
         }
       }
     },
-    "links": {
-      "type": "object",
-      "description": "The links object represents a set of possible design-time links for a response. The presence of a link does not guarantee the caller's ability to successfully invoke it, rather it provides a known relationship and traversal mechanism between responses and other operations.  As opposed to _dynamic_ links (links provided **in** the response payload), the OAS linking mechanism does not require that link information be provided in a specific response format at runtime.  For computing links, and providing instructions to execute them, variable substitution is used for accessing values in a response and using them as values while invoking the linked operation.",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^[a-zA-Z0-9\\.\\-_]+$": {
-          "$ref": "#/definitions/linkOrReference"
-        }
-      }
-    },
     "link": {
       "type": "object",
-      "description": "The `Link Object` is responsible for defining a possible operation based on a single response.",
+      "description": "The `Link object` represents a possible design-time link for a response. The presence of a link does not guarantee the caller's ability to successfully invoke it, rather it provides a known relationship and traversal mechanism between responses and other operations.  As opposed to _dynamic_ links (links provided **in** the response payload), the OAS linking mechanism does not require that link information be provided in a specific response format at runtime.  Many operations require parameters to be passed, and these MAY be dynamic depending on the response itself. For computing links, and providing instructions to execute them, variable substitution is used for accessing values in a response and using them as values while invoking the linked operation.",
       "additionalProperties": false,
       "patternProperties": {
         "^x-": {
@@ -676,10 +610,10 @@
           "type": "string"
         },
         "parameters": {
-          "$ref": "#/definitions/linkParameters"
+          "$ref": "#/definitions/expressions"
         },
         "headers": {
-          "$ref": "#/definitions/headers"
+          "$ref": "#/definitions/headersOrReferences"
         },
         "description": {
           "type": "string"
@@ -689,19 +623,9 @@
         }
       }
     },
-    "linkParameters": {
-      "type": "object",
-      "description": "Using the `operationId` to reference an operation in the definition has many benefits, including the ability to define media type options, security requirements, response and error payloads. Many operations require parameters to be passed, and these MAY be dynamic depending on the response itself.  To specify parameters required by the operation, we can use a **Link Parameters Object**. This object contains parameter names along with static or dynamic values:",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^[a-zA-Z0-9\\.\\-_]+$": {
-          "$ref": "#/definitions/anyOrExpression"
-        }
-      }
-    },
     "header": {
       "type": "object",
-      "description": "The Header Object follows the structure of the Parameter Object, with the following changes:  1. `name` MUST NOT be specified, it is given in the Headers Object. 1. `in` MUST NOT be specified, it is implicitly in `header`. 1. All traits that are affected by the location MUST be applicable to a location of `header` (for example, `style`).",
+      "description": "The Header Object follows the structure of the Parameter Object, with the following changes:  1. `name` MUST NOT be specified, it is given in the corresponding `headers` map. 1. `in` MUST NOT be specified, it is implicitly in `header`. 1. All traits that are affected by the location MUST be applicable to a location of `header` (for example, `style`).",
       "additionalProperties": false,
       "patternProperties": {
         "^x-": {
@@ -746,7 +670,7 @@
           "$ref": "#/definitions/examplesOrReferences"
         },
         "content": {
-          "$ref": "#/definitions/content"
+          "$ref": "#/definitions/mediaTypes"
         }
       }
     },
@@ -1065,20 +989,7 @@
           "type": "string"
         },
         "scopes": {
-          "$ref": "#/definitions/scopes"
-        }
-      }
-    },
-    "scopes": {
-      "type": "object",
-      "description": "Lists the available scopes for an OAuth2 security scheme.",
-      "additionalProperties": false,
-      "patternProperties": {
-        "^": {
-          "type": "string"
-        },
-        "^x-": {
-          "$ref": "#/definitions/specificationExtension"
+          "$ref": "#/definitions/strings"
         }
       }
     },
@@ -1095,16 +1006,6 @@
           "uniqueItems": true
         }
       }
-    },
-    "anyOrExpression": {
-      "oneOf": [
-        {
-          "$ref": "#/definitions/any"
-        },
-        {
-          "$ref": "#/definitions/expression"
-        }
-      ]
     },
     "callbackOrReference": {
       "oneOf": [
@@ -1202,10 +1103,28 @@
         "$ref": "#/definitions/callbackOrReference"
       }
     },
+    "encodings": {
+      "type": "object",
+      "additionalProperties": {
+        "$ref": "#/definitions/encoding"
+      }
+    },
     "examplesOrReferences": {
       "type": "object",
       "additionalProperties": {
         "$ref": "#/definitions/exampleOrReference"
+      }
+    },
+    "expressions": {
+      "type": "object",
+      "additionalProperties": {
+        "$ref": "#/definitions/expression"
+      }
+    },
+    "headers": {
+      "type": "object",
+      "additionalProperties": {
+        "$ref": "#/definitions/header"
       }
     },
     "headersOrReferences": {
@@ -1218,6 +1137,12 @@
       "type": "object",
       "additionalProperties": {
         "$ref": "#/definitions/linkOrReference"
+      }
+    },
+    "mediaTypes": {
+      "type": "object",
+      "additionalProperties": {
+        "$ref": "#/definitions/mediaType"
       }
     },
     "parametersOrReferences": {
@@ -1248,6 +1173,12 @@
       "type": "object",
       "additionalProperties": {
         "$ref": "#/definitions/securitySchemeOrReference"
+      }
+    },
+    "serverVariables": {
+      "type": "object",
+      "additionalProperties": {
+        "$ref": "#/definitions/serverVariable"
       }
     },
     "strings": {
